Pushing all the 6 endpoint at once
